Fixed spacing between buttons and project description

--- a/css/main.css
+++ b/css/main.css
@@ -86,6 +86,9 @@ header {
 .project-item {
   background-color: #fff;
   border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .project-item img {
@@ -122,6 +125,9 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+
+  padding: 0 2rem 2rem 2rem;
+  font-size: 2rem;
 }
 
 .project-item__btn {
